Changed heading of Discharged to Discharged Patients

--- a/src/app/components/india/india.component.html
+++ b/src/app/components/india/india.component.html
@@ -49,7 +49,7 @@
             <th scope="col">S.No</th>
             <th scope="col">states</th>
             <th scope="col">Confirmed Cases</th>
-            <th scope="col">Discharged</th>
+            <th scope="col">Discharged Cases</th>
             <th scope="col">Deaths</th>
           </tr>
         </thead>
