--- a/src/app/components/tn/tn.component.html
+++ b/src/app/components/tn/tn.component.html
@@ -33,9 +33,9 @@
     </table>
     </div>
     
-    <div class="col-md-6" style="width:fit-content; height:fit-content;">
+    <div class="col-md-6 col-sm-12" style="width:fit-content; height:fit-content;">
     
-      <canvas id="pieChart" style="width:fit-content; height:fit-content;"></canvas>
+      <canvas id="pieChart"></canvas>
       </div>
     
     </div>
