--- a/src/app/components/world/world.component.html
+++ b/src/app/components/world/world.component.html
@@ -1,11 +1,14 @@
-<div >
-
-    <canvas id="lineChart" style="width:fit-content; height:fit-content;"></canvas>
+<div class ="mt-2">
+<div style=" height:400px;  background-color: white;"> 
+    <canvas id="lineChart"></canvas>
     </div>
-  
+  <br>
 
-    <div >
+    <div style=" height:400px;  background-color: white;">
 
-        <canvas id="lineChart1" style="width:fit-content; height:fit-content;"></canvas>
+        <canvas id="lineChart1"></canvas>
         </div>
-      
+   
+
+  
+  </div>
