--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,33 @@
 <div class="container">
-  <nav class=" mt-3 navbar navbar-expand-lg navbar-light bg-light ">
+  <nav class=" mt-2 navbar navbar-expand-sm navbar-light bg-light navbar-fixed-top">
 
   
-  <a class="navbar-brand"><strong><span class="text-warning">COVID</span>STATS</strong></a>
-    <li class="nav nav-item  nav-link " routerLink="/"><a ><strong>INDIA</strong></a></li>
-      <li class="nav nav-item  nav-link" routerLink="/tamil"><a ><strong>TAMIL NADU</strong></a></li>
-      <li class="nav nav-item  nav-link" routerLink="/world"><a><strong>ANALYTICS</strong></a></li>
-      <li class="nav nav-item nav-link" routerLink="/contact"><a><strong>EMERGENCY CONTACT</strong></a></li>
+  <a class="navbar-brand" href=""><strong><span class="text-warning">COVID</span>STATS</strong></a>
+
+  <button class="navbar-toggler" type="button" (click)="toggle()" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"> </span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngClass]="{'show':isToggled}">
+    <ul class="navbar-nav">
+    <li class="nav-item"><a  class="nav-link " (click)="toggle()"  routerLink="/"><strong>INDIA</strong></a></li>
+      <li class="nav-item"><a class="nav-link" (click)="toggle()" routerLink="/tamil"><strong>TAMIL NADU</strong></a></li>
+      <li class="nav-item"><a class=" nav-link" (click)="toggle()" routerLink="/world"><strong>ANALYTICS</strong></a></li>
+      <li class="nav-item"><a class="  nav-link" (click)="toggle()" routerLink="/contact"><strong>EMERGENCY CONTACT</strong></a></li>
     
-   
+    </ul>
+  </div>
 
 </nav>
 <br><br>
 <header></header>
 
-<div class="mt-6">
+
+<div class="mt-4">
   <router-outlet></router-outlet>
 </div>
 
-</div>
+</div> 
 
 <!--div class="container-fluid" style="line-height:0px">
 <div>  <nav class="navbar navbar-expand-lg navbar-light bg-dark text-light ">
