--- a/src/app/components/india/india.component.html
+++ b/src/app/components/india/india.component.html
@@ -33,9 +33,9 @@
 </table>
 </div>
 
-<div class="col-md-6" style="width:fit-content; height:fit-content;">
 
-  <canvas id="pieChart" style="width:fit-content; height:fit-content;"></canvas>
+<div class="col-md-6" style="width:fit-content; height:300px;">
+  <canvas id="pieChart"></canvas>
   </div>
 
 </div>
